# CompProj_22-23

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/OpenCV/: CVIO.cpp  CVIO.h
src/OpenCV/cascade/: haarcascade_fullbody.xml
src/OpenGL/: Common.h  GLMain.cpp  GLMain.h  Input.cpp  Input.h  Window.cpp  Window.h
